OVS: consolidate topology tests and verify host dispatch